--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ pytesseract==0.3.10
 Pillow==10.4.0
 matplotlib==3.9.2
 seaborn==0.13.2
-together==1.2.1
 openpyxl==3.1.5
 python-docx==1.1.2
 python-dotenv==1.0.1
 numpy==1.26.4
+requests==2.32.3
